fix: profile snippet format on small screen sizes

--- a/src/Components/ProfileSnippet/ProfileSnippet.css
+++ b/src/Components/ProfileSnippet/ProfileSnippet.css
@@ -1,4 +1,16 @@
 .profile-snippet-container {
-  grid-area: 1 / 3 / 2 / 5;
+  grid-area: 1 / 3 / 8 / 5;
   padding-right: 20px;
+}
+
+@media only screen and (max-width: 800px){
+    .profile-snippet-container {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1300px){
+    .profile-snippet-container {
+        grid-area: 1 / 2 / 8 / 5;
+    }
 }
